--- a/film.html
+++ b/film.html
@@ -106,36 +106,35 @@
             <div class="movies-list">
                 <ul>
                 <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/basketball.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/lee.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/ring.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/wolf.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/lee.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/ring.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/basketball.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/ring.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/lee.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/lee.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/basketball.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
                 <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
                 <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/ring.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/basketball.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/wolf.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/basketball.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
                 <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/ring.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/wolf.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
                 <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
+                <li><img src="./img/basketball.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
                 <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li>
-                <li><img src="./img/goldfather.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li></ul>
-
+                <li><img src="./img/ring.jpg" width="160px" height="220px" alt=""><p><a href="#">教父</a></p><p><i>9.</i><i>0</i></p></li></ul>
             </div>
             <div class="movies-pager">
                 <ul>
